@startuml

title __FAVORITE's Class Diagram__\n

  namespace com.example.procomsearch {
    namespace ui.Favorite {
      class com.example.procomsearch.ui.Favorite.FavoriteFragment {
          ~ recyclerView : RecyclerView
          {static} - db : SQLiteDatabase
          {static} - emptyText : TextView
          {static} - favoriteCompanies : CompanyFactory
          {static} - userId : int
          + onCreateView()
          + onResume()
          {static} + removeFavorite()
          - iniFavoriteList()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace ui.Favorite {
      class com.example.procomsearch.ui.Favorite.FavoriteViewModel {
          - mText : MutableLiveData<String>
          + FavoriteViewModel()
          + getText()
      }
    }
  }
  

  com.example.procomsearch.ui.Favorite.FavoriteFragment -up-|> androidx.fragment.app.Fragment
  com.example.procomsearch.ui.Favorite.FavoriteFragment o-- com.example.procomsearch.ui.Favorite.FavoriteViewModel : favoriteViewModel
  com.example.procomsearch.ui.Favorite.FavoriteViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
